Kubernetes/Cluster1/Postgres/pgadmin/pgadmin.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pgadmin
  namespace: database
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pgadmin
  template:
    metadata:
      labels:
        app: pgadmin
    spec:
      nodeSelector:
        kubernetes.io/hostname: worker2
      serviceAccountName: pgadmin-sa
      containers:
        - name: pgadmin
          image: dpage/pgadmin4:latest
          resources:
            # requests:
            #   memory: "256Mi"
            #   cpu: "150m"
            # limits:
            #   memory: "256Mi"
            #   cpu: "150m"
          ports:
            - containerPort: 80
          volumeMounts:
            - name: pgadmin-storage
              mountPath: /var/lib/pgadmin
      volumes:
        - name: pgadmin-storage
          persistentVolumeClaim:
            claimName: pgadmin-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: pgadmin-service
  namespace: database
spec:
  selector:
    app: pgadmin
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pgadmin-ingress
  namespace: database
spec:
  ingressClassName: nginx
  rules:
    - host: pgadmin.localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pgadmin-service
                port:
                  number: 80
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: pgadmin-network-policy
  namespace: database
spec:
  podSelector:
    matchLabels:
      app: pgadmin
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - {}
  egress:
    - to:
        - podSelector:
            matchLabels:
              app.kubernetes.io/instance: postgres-db
      ports:
        - protocol: TCP
          port: 5432
    # DNS - required for service discovery
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
      ports:
        - protocol: UDP
          port: 53
        - protocol: TCP
          port: 53
---
